<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_whatsapp_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/whatsapp_icon"
        android:src="@drawable/ic_whatsapp" />

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/write_phone_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <EditText
        android:id="@+id/et_space_for_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/number_code_of_kyrgyzstan" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/go_to_whatsap"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_gallery"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/go_to_gallery"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

</LinearLayout>